# taller-programacion

./: .gitignore  Dockerfile  README.md  carga_datos.py  docker-compose.yaml  obtener_tweet.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
client/: main.py
data/: transform.py
db/: .gitignore
webserver/: Dockerfile  database_sql_orm.py  database_sql_vanilla.py  init.sh  main.py
webserver/src/: database copy.py  database.py  main.py  response_tweet.py  tweet.py
